--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-stamp-branch/check-stamp-branch.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-stamp-branch/check-stamp-branch.component.html
@@ -472,11 +472,11 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="six wide column">
-        <button class="ui primary button">
+        <button class="ui mini primary button">
           <i class="save icon"></i>
           บันทึก
         </button>
-        <button class="ui button" (click)="closeModal()">
+        <button class="ui mini button" (click)="closeModal()">
           <i class="close icon"></i>
           ปิด
         </button>
