--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int03-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int03-1.component.html
@@ -21,6 +21,8 @@
       </div>
     </div>
 
+    <h2 class="ui header">อัพโหลดงบทดลอง</h2>
+
     <div class="ui top attached header">
       <span>อัพโหลดงบทดลอง</span>
     </div>
