--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-6/int07-6.component.html
@@ -1,3 +1,577 @@
-<p>
-  int07-6 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ตรวจสอบการนำส่งเงินบัญชีเจ้าหนี้ อปท.</h2>
+
+    <div class="ui top attached header">
+      <span>ตรวจสอบการนำส่งเงินบัญชีเจ้าหนี้ อปท.</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field ">
+            <label class="custom-label-w-25">บัญชีเจ้าหนี้ อปท.</label>
+            <input type="file" />
+          </div>
+        </div>
+      </div>
+
+      <div class="ui center aligned grid">
+        <div class="four wide column">
+          <button class="ui mini primary button" (click)="uploadData()">
+            <i class="upload icon"></i>
+            อัพโหลด
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="trash outline icon"></i>
+            ลบไฟล์
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui segment" *ngIf="showData">
+      <div class="ui right aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button">
+            <i class="print outline icon"></i>
+            พิมพ์
+          </button>
+        </div>
+      </div>
+
+      <table class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th>เลขเอกสาร</th>
+            <th>รหัส</th>
+            <th>ประเภท</th>
+            <th>วันที่เอกสาร</th>
+            <th>เดบิต</th>
+            <th>เครดิต</th>
+            <th>รวม</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>8000001836</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>04.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000002693</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>05.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000004648</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>07.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-97</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000005644</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>10.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-97</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000006795</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>11.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-38.8</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000007721</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>12.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000010097</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>13.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-116.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000010202</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>17.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>3400001003</td>
+            <td>8500</td>
+            <td>KI</td>
+            <td>18.10.2016</td>
+            <td>630.5</td>
+            <td>&nbsp;</td>
+            <td>203.7</td>
+          </tr>
+          <tr>
+            <td>8000012115</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>19.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-38.8</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000013172</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>20.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000016037</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>26.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000017061</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>21.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-38.8</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000017118</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>27.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-116.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000017931</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>28.10.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr class="bg-row-orange-highlight">
+            <td colspan="6"></td>
+            <td style="text-align: right;">-48.5</td>
+          </tr>
+          <tr>
+            <td>8000019340</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>01.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000021730</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>03.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-97</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000021782</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>04.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000022958</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>07.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-38.8</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000025894</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>10.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-19.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000026947</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>11.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-97</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000028222</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>14.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-97</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>3400000316</td>
+            <td>8500</td>
+            <td>KI</td>
+            <td>15.11.2016</td>
+            <td>8933.7</td>
+            <td>&nbsp;</td>
+            <td>8545.7</td>
+          </tr>
+          <tr>
+            <td>8000029567</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>15.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-252.2</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000030479</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>16.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-407.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000031527</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>17.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-213.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000033475</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>18.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-194</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000033555</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>21.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-194</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000034943</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>22.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,338.60</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000038323</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>23.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-310.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000038326</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>24.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-620.8</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000038329</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>25.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,464.70</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000040330</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>28.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-892.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000040405</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>29.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,202.80</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000040442</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>30.11.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,455.00</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="6"></td>
+            <td style="text-align: right;">0</td>
+          </tr>
+          <tr>
+            <td>8000042152</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>01.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,522.90</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000043306</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>02.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-582</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000044342</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>06.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-3,501.70</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000045385</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>07.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,881.80</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000046416</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>08.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-659.6</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000048134</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>09.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-368.6</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000049303</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>13.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-3,045.80</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000050487</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>14.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,735.40</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>3400000713</td>
+            <td>8500</td>
+            <td>KI</td>
+            <td>15.12.2016</td>
+            <td>11,669.10</td>
+            <td>&nbsp;</td>
+            <td>-2,628.70</td>
+          </tr>
+          <tr>
+            <td>8000053269</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>15.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,667.50</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000053273</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>16.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,746.00</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000054344</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>19.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,871.20</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000055565</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>20.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-989.4</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000056571</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>21.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-679</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000057827</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>22.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,095.20</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000058851</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>23.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-911.8</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000059786</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>26.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,250.40</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000061040</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>27.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,067.00</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000062437</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>28.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,696.60</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000063526</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>29.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-1,125.20</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>8000064441</td>
+            <td>8500</td>
+            <td>IB</td>
+            <td>30.12.2016</td>
+            <td>&nbsp;</td>
+            <td>-2,182.50</td>
+            <td></td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <th colspan="6">รวม</th>
+          <th style="text-align: right;">-23,910.50</th>
+        </tfoot>
+      </table>
+    </div>
+
+  </div>
+</div>
